tests/invalid/non_void_missing_return.wio
fn Broken() -> i32 {
    let value = 42;
}

fn Entry() -> i32 {
    return Broken();
}
